--- a/Views/AdminTags/List.cshtml
+++ b/Views/AdminTags/List.cshtml
@@ -1,4 +1,4 @@
-@model List<Bloggie.Web.Models.Domain.Tag>
+@model IEnumerable<Bloggie.Web.Models.Domain.Tag>
 
 
 <div class="bg-secondary bg-opacity-10 py-2">
